--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 #level-title {
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Press Start 2P', Serif;
   font-size: 3rem;
   margin:  5%;
   color: #FEF2BF;
@@ -12,7 +12,7 @@ body {
 
 .container {
   display: block;
-  width: 50%;
+  width: 40%;
   margin: auto;
 
 }
